Added background gray and took away gap between header and content

--- a/home.css
+++ b/home.css
@@ -23,3 +23,9 @@ Date Created: 1/25/19
   margin: 0 auto;
   width: 100%;
 }
+.noTopMargin{
+  margin-top: -100px;
+}
+#body{
+  background-color: #afafaf;
+}
