Added the project vision and important links section

--- a/home.css
+++ b/home.css
@@ -29,3 +29,20 @@ Date Created: 1/25/19
 #body{
   background-color: #afafaf;
 }
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
