--- a/home.css
+++ b/home.css
@@ -30,7 +30,7 @@ Date Created: 1/25/19
   background-color: #afafaf;
 }
 a:link {
-  color: green;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
@@ -42,7 +42,7 @@ a:visited {
 }
 
 a:hover {
-  color: red;
+  color: black;
   background-color: transparent;
   text-decoration: underline;
 }
